--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reenbit",
+  "name": "react-reenbit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://bogdanglazkov.github.io/react-reenbit/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
