--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-reenbit",
+  "name": "reenbit",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bogdanglazkov.github.io/react-reenbit/",
