--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "reenbit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bogdanglazkov.github.io/react-reenbit/",
+  "homepage": "https://bogdanglazkov.github.io/react-reenbit",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.17.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.1.1",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
